# dirtvz

./: .gitignore  Cargo.toml  README.md  cad.ts.bak.ts  dirtvz-worker.js  elm.json  index.css  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Notes/: DEPLOY.md
elm/: Cmn.elm  Nav.elm  Notice.elm  ObjectTree.elm  Ports.elm  Progress.elm  Settings.elm  SpatialObject.elm  Style.elm  ViewerUI.elm  html-colours.txt
rust/: lib.rs
static/: index.html
ts/: data.ts  index.ts  local-loader.ts  prg-stream.ts  spatial-obj.ts  store.ts  viewer-ui.ts  viewer.ts  wasm.ts  worker-spawn.ts  worker.ts
ts/data/: spatial.ts  trimesh-surface.ts
ts/viewer/: camera.ts  index.ts  layers.ts  light.ts  prop.ts  viewer.ts  world-axes.ts
