[package]
name = "dirtvz-rs"
version = "0.1.0"
authors = ["Kurt Lawrence <kurtlawrence.info>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[features]
err-capture = ["dep:console_error_panic_hook"]

[dependencies]
geom = { git = "https://github.com/kurtlawrence/geom", branch = "fork=dirtvz", features = ["js"] }
# geom = { path = "../geom", features = ["js"] }
rustc-hash = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
